[tool.poetry]
name = "bstruct"
version = "0.1.0"
description = "Create efficient encoders and decoders for binary data using type annotations."
authors = ["flxbe <flxbe@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.8.0"
construct = "2.10.68"
snakeviz = "^2.1.1"
pyright = "^1.1.271"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false