[tool.poetry]
name = "bstruct"
version = "0.5.0"
description = "Simple and efficient binary (de)serialization using type annotations."
authors = ["flxbe <flxbe@mailbox.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flxbe/bstruct"
documentation = "https://bstruct.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.urls]
Changelog = "https://github.com/flxbe/bstruct/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
black = "^22.8.0"
pyright = "^1.1.271"
construct = "2.10.68"
pyperf = "^2.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-copybutton = "^0.5.1"
myst-parser = "^0.18.1"
furo = "^2022.12.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.3"
snakeviz = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.ruff]
select = ["I"]